--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.background": "#5A024A",
-    "titleBar.activeBackground": "#7E0368",
-    "titleBar.activeForeground": "#FFF9FE"
+    "activityBar.background": "#4D2019",
+    "titleBar.activeBackground": "#6C2C23",
+    "titleBar.activeForeground": "#FDF9F8"
   }
 }
