Inicio Completado con Logo Solucionado

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.background": "#4D2019",
-    "titleBar.activeBackground": "#6C2C23",
-    "titleBar.activeForeground": "#FDF9F8"
+    "activityBar.background": "#52035F",
+    "titleBar.activeBackground": "#720486",
+    "titleBar.activeForeground": "#FEFBFF"
   }
 }
